--- a/keepassxc-browser/manifest.json
+++ b/keepassxc-browser/manifest.json
@@ -81,6 +81,13 @@
                 "default": "Alt+Shift+T",
                 "mac": "MacCtrl+Shift+T"
             }
+        },
+        "show_password_generator": {
+            "description": "__MSG_passwordGeneratorShow__",
+            "suggested_key": {
+                "default": "Alt+Shift+G",
+                "mac": "MacCtrl+Shift+G"
+            }
         }
     },
     "web_accessible_resources": [
